fixtures/positive/escapechar_structure.inc
---
title = Escape character data
[structure]
escapechar = |
---
name,note
Ada,"say |"hi|""
