fixtures/negative/unsupported_structure_key.inc
---
title = Unsupported structure key
[structure]
skipto = 2
---
name,score
Ada,21
